# wordler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GBenchCMakeLists.txt.in  LICENSE  Makefile  README  README.md
.github/workflows/: build_and_test.yml  track_perf.yml
dev/bench/: data.js
src/: CMakeLists.txt  Solver.b.cpp  Solver.h  Solver.t.cpp  Wordle.b.cpp  Wordle.h  Wordle.t.cpp  main.x.cpp
